# Agentic-AI-with-Python

./: .env.example  .gitignore  README.md  pyproject.toml
app/: 04_function_tools_agent.py  04b_agent_calculate_bill.py  05_hosted__tool_agent.py  06_agent_as_tool.py  07_local_context.py  08_history.py  basic_agent.py  streaming.py  todos.json
app/langchain/: batching.py  human_in_the_loop_middleware.py  init_gemini_model.py  init_groq_model.py  init_model.py  init_openai_model.py  messages_with_tools.py  nested_structured_output.py  short_term_memory.py  streaming_output.py  structured_output.py  summarize_middleware.py  tools.py  types_of_messages.py  web_search_tool.py
app/llm_and_prompt_engineering/01_llm_basics/: 01_gemini_llm.py  02_gemini_llm_stream.py
app/llm_and_prompt_engineering/02_ll_settings/: llm_temperature.py
app/llm_and_prompt_engineering/02_llm_settings/: 02_llm_max_tokens.py  03_llm_top_p.py
app/llm_and_prompt_engineering/03_promting_techniques/: 01_prompt_elements.py  03_few_shot.py  04_chain_of_throught.py  05_meta_prompting.py  prompt_elements.py
app/openai_agent_sdk/: 03_structured_output.py  04a_agent_tool_todo.py
app/openai_agent_sdk/agents/: 01_basic_configuration.py
app/rag/: pdf_loader.py  web_loader.py
app/rag/loaders/: document_loader.py  notes.txt
app/rag/retrievers/: arvix.py  mmr.py  multiquery.py
app/rag/text_splitters/: character_text_splitters.py  notes.txt  recursive_splitters.py  token_splitters.py
app/runnables/: parallel_runnable.py  runnable_passthrough.py  sequential_runnable.py
chroma-db/: chroma.sqlite3
(+1 files in other folders)
